Bug: Readjust details divs
Issue: modal details are overlapping outside the div.

--- a/src/components/modal/contents/PokeDetails.css
+++ b/src/components/modal/contents/PokeDetails.css
@@ -53,8 +53,8 @@
 
 .modal .content .information {
     background-color: white;
-    margin: 3rem;
-    height: 56rem;
+    margin: 2rem;
+    height: 58rem;
     padding: 2rem;
     text-align: left;
 
